--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-status-bar": "~1.12.1",
