--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,7 +22,10 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "expo-auth-session": "~5.5.2",
+    "expo-web-browser": "~13.0.3",
+    "expo-system-ui": "~3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
