--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-auth-session": "~5.5.2",
-    "expo-constants": "~16.0.1",
+    "expo-constants": "~16.0.2",
+    "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
@@ -26,8 +27,7 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "styled-components": "^6.1.11",
-    "expo-splash-screen": "~0.27.4"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
