--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
+    "expo": "~51.0.13",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "styled-components": "^6.1.11"
