--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "expo": "~51.0.17",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-notifications": "^0.28.9",
+    "expo-permissions": "^14.4.0",
+    "expo-sms": "~12.0.1",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -28,11 +31,15 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.74.2",
+    "react-native": "^0.74.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-get-sms-android": "^2.1.0",
     "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.5",
     "react-native-picker-select": "^9.1.3",
     "react-native-progress": "^5.0.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
