--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-notifications": "^0.28.9",
-    "expo-permissions": "^14.4.0",
     "expo-sms": "~12.0.1",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "^3.0.7",
     "expo-web-browser": "~13.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
